# instagram-scrapper

./: .gitignore  account_manager.py  app.py  database.py  fbid.py  insta_scraper.py  proxy.py  pyproject.toml  requirements.txt  session.py  task_handler.py
static/js/: app.js
templates/: index.html
